# washitsu

./: hawaiian.py  pyproject.toml  test.py
washitsu/: __init__.py  rules.py
